@@ -2,8 +2,10 @@ package com.arthur.blackjack.controller.impl;
 
 import java.util.Stack;
 
+import lombok.Setter;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import com.arthur.blackjack.config.GameRules;
@@ -21,29 +23,21 @@ import com.arthur.blackjack.utils.GameUtils;
 public class PlayerTurnManagerImpl implements PlayerTurnManager {
     private static final Logger logger = LogManager.getLogger(PlayerTurnManagerImpl.class);
 
-    private final Player player;
-    private final Dealer dealer;
-    private final Deck deck;
     private final HandFactory handFactory;
 
-    private Strategy playStrategy;
+    @Setter
+    private Strategy strategy;
     private final GameRules rules;
 
-    public PlayerTurnManagerImpl(Player player, Dealer dealer, Deck deck, HandFactory handFactory, GameRules rules) {
-        this.player = player;
-        this.dealer = dealer;
-        this.deck = deck;
+    @Autowired
+    public PlayerTurnManagerImpl(HandFactory handFactory, GameRules rules) {
         this.handFactory = handFactory;
         this.rules = rules;
     }
 
-    public void setStrategy(Strategy strategy) {
-        this.playStrategy = strategy;
-    }
-
-    public void playerTurn() {
+    public void playerTurn(Dealer dealer, Player player, Deck deck) {
         // Only play turn if dealer and player both don't have blackjack
-        if (!GameUtils.isOpen10Blackjack(dealer.getHand()) && !GameUtils.isBlackjack(player.getHands().get(0))) {
+        if (!GameUtils.isOpen10Blackjack(dealer.getHand()) && !GameUtils.isBlackjack(player.getHands().getFirst())) {
             Stack<PlayerHand> stack = new Stack<>();
             stack.addAll(player.getHands());
 
@@ -52,19 +46,19 @@ public class PlayerTurnManagerImpl implements PlayerTurnManager {
                 PlayerHand hand = stack.pop();
                 GameUtils.displayHandsHiddenUpcard(dealer.getHand(), hand);
 
-                if (split(hand, stack))
+                if (split(dealer, player, deck, hand, stack))
                     continue;
-                if (doubleDown(hand))
+                if (doubleDown(dealer, player, deck, hand))
                     continue;
-                hitOrStand(hand);
+                hitOrStand(dealer, player, deck, hand);
             }
         }
     }
 
-    private boolean split(PlayerHand hand, Stack<PlayerHand> stack) {
+    private boolean split(Dealer dealer, Player player, Deck deck, PlayerHand hand, Stack<PlayerHand> stack) {
         int playerHandFirstCardValue = hand.getCards().get(0).getRank().getValue();
         int playerHandSecondCardValue = hand.getCards().get(1).getRank().getValue();
-        int dealerUpcardValue = dealer.getHand().getCards().get(0).getRank().getValue();
+        int dealerUpcardValue = dealer.getHand().getCards().getFirst().getRank().getValue();
 
         // Must have pair, only 2 cards, enough money, not exceed resplit limit, and
         // resplitting ace is allowed
@@ -73,7 +67,7 @@ public class PlayerTurnManagerImpl implements PlayerTurnManager {
                 && player.getBankroll() >= hand.getBet()
                 && player.getHands().size() < rules.getResplitLimit()
                 && (player.getHands().size() == 1 || rules.isResplitAces() || playerHandFirstCardValue != 11)
-                && playStrategy.split(playerHandFirstCardValue, dealerUpcardValue)) {
+                && strategy.split(playerHandFirstCardValue, dealerUpcardValue)) {
             // Create new hand and add card from original hand
             PlayerHand newHand = handFactory.createPlayerHand();
             newHand.addCard(hand.getCards().remove(1));
@@ -94,12 +88,12 @@ public class PlayerTurnManagerImpl implements PlayerTurnManager {
         return false;
     }
 
-    private boolean doubleDown(PlayerHand hand) {
+    private boolean doubleDown(Dealer dealer, Player player, Deck deck, PlayerHand hand) {
         // Must have enough money, only 2 cards, and double after split or only 1 hand
         if (player.getBankroll() >= hand.getBet()
                 && hand.getCards().size() == 2
                 && (rules.isDoubleAfterSplit() || player.getHands().size() == 1)
-                && playStrategy.doubleDown(hand, dealer.getHand().getUpCard().getRank().getValue())) {
+                && strategy.doubleDown(hand, dealer.getHand().getUpCard().getRank().getValue())) {
             hand.addCard(deck.dealCard());
             player.subtractFromBankroll(hand.getBet());
             hand.setBet(hand.getBet() * 2);
@@ -110,11 +104,11 @@ public class PlayerTurnManagerImpl implements PlayerTurnManager {
         return false;
     }
 
-    private void hitOrStand(PlayerHand hand) {
-        Rank firstCardRank = hand.getCards().get(0).getRank();
+    private void hitOrStand(Dealer dealer, Player player, Deck deck, PlayerHand hand) {
+        Rank firstCardRank = hand.getCards().getFirst().getRank();
         while (hand.getHandValue() < 21
                 && (player.getHands().size() == 1 || rules.isHitSplitAces() || firstCardRank.equals(Rank.ACE))
-                && playStrategy.hit(hand, dealer.getHand().getUpCard().getRank().getValue())) {
+                && strategy.hit(hand, dealer.getHand().getUpCard().getRank().getValue())) {
             hand.addCard(deck.dealCard());
             logger.trace("Player hit.");
             GameUtils.displayHandsHiddenUpcard(dealer.getHand(), hand);
